@@ -2,6 +2,7 @@ Version 1.1-1 (2016-03-30)
 
 o covEllipses() extended to more than two variables, giving a scatterplot matrix plot
 o plot.boxM now can plot other measures of the eigenvalues of the covariance matrices.
+o plot.boxM gets a `rev` argument to order groups from top to bottom
 
 Version 1.1-0 (2016-03-03)
 
